Subir restante 13oct

--- a/generarImagenesRango.html
+++ b/generarImagenesRango.html
@@ -4,11 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <style>
-        .rojo {
-            color: red;
-        }
-    </style>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
@@ -29,6 +24,9 @@
                     var img = $("<img>", { "src": "Images/bandera_españa.jpg" });
                     img.mouseover(function () {
                         $(this).attr("src","Images/escudo_madrid.jpg");
+                    });
+                    img.mouseout(function () {
+                        $(this).attr("src","Images/bandera_españa.jpg");
                     });
                     img.appendTo($contenedor);
                 }
